# tensorrag-prototype

./: .gitignore  ARCHITECTURE_OVERVIEW.md  CARD_CREATION_GUIDE.md  CARD_DEVELOPMENT_GUIDE.md  COMPLETE_DL_TRAINING_VISUAL.md  CORRECTED_TRAINING_FLOW.md  DISTRIBUTED_TRAINING_PIPELINE.md  GPU_TRAINING_GUIDE.md  MODEL_DEFINE_VS_BUILD_MODEL.md  NEURAL_NETWORK_PIPELINE.md  QUICK_START_TEST.md  README.md  SINGLE_CONNECTION_FLOW.md  TESTING_GUIDE.md  TEST_SEQUENCES.md  TRAINING_CARD_USAGE_GUIDE.md  TRAINING_COMPONENTS_GUIDE.md  TRAINING_STEPS_VISUAL_GUIDE.md  Untitled  VLLM_FINETUNING_PIPELINE.md  package-lock.json  quick_test.sh
backend/: .gitignore  api.http  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: card.py  pipeline.py
backend/app/routers/: artifacts.py  cards.py  pipeline.py  workspace.py
backend/app/services/: custom_card_manager.py  dag.py  executor.py  s3_storage.py  storage.py  workspace_manager.py
backend/app/ws/: status.py
backend/cards/: base.py  data_load.py  data_split.py  evaluate.py  inference.py  modal_app.py  model_define.py  model_define_gpu.py  registry.py  train.py  train_gpu.py  training_backward.py  training_build_model.py  training_forward.py  training_init_optimizer.py  training_loss.py  training_optimizer_step.py  training_prepare_batch.py  training_zero_grad.py
backend/tests/: test_cards.py  test_dag.py  test_executor.py
docs/: architecture.md  design-decisions.md  v1-roadmap.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+25 files in other folders)
