[project]
name = "tensorrag-backend"
version = "0.1.0"
description = "TensorRag backend — ML pipeline orchestration API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "modal>=0.73.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cards*"]
